# backend

./: .coverage  .gitignore  AGENTS.md  README.md  alembic.ini  app.db  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 53b054888de4_create_events_table.py  a09769e5e09c_event.py  add_last_name_birth_date_to_users.py
api/: app.py
api/features/event/: event.py  event_controller.py  event_repository.py  event_schemas.py  event_service.py
api/features/user/: user.py  user_controller.py  user_models.py  user_repository.py  user_schemas.py  user_service.py
api/shared/: dependencies.py  exceptions.py  security.py
database/config/: session.py  settings.py
database/docs/: erd.md
tests/: conftest.py  test_event_controller.py  test_user_controller.py
